--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,10 +7,10 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
+  - name: Research
     url: '#posts'
     weight: 20
-  - name: Projects
+  - name: People
     url: '#projects'
     weight: 30
   - name: Talks
